--- a/index.html
+++ b/index.html
@@ -10,20 +10,35 @@
         <div id="controls">
             <button onClick="addRandomPoint()">Add Point</button>
             <button onClick="addRandomSegment()">Add Segment</button>
+            <button onClick="removeRandomSegment()">Remove Segment</button>
         </div>
 
         <script src="js/math/graph.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
         <script>
+            function removeRandomSegment() {
+                if (graph.segments.length == 0) {
+                    console.log("no segments");
+                    return;
+                }
+                const index = Math.floor(Math.random() * graph.segments.length);
+                graph.removeSegment(graph.segments[index]);
+                ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                graph.draw(ctx);
+            }
+
             function addRandomSegment() {
                 const index1 = Math.floor(Math.random() * graph.points.length);
                 const index2 = Math.floor(Math.random() * graph.points.length);
-                graph.addSegment(
-                    new Segment(graph.points[index1], graph.points[index2]),
-                );
-                ctx.clearRect(0, 0, myCanvas.wdith, myCanvas.height);
-                graph.draw(ctx);
+                if (index1 != index2) {
+                    const success = graph.tryAddSegment(
+                        new Segment(graph.points[index1], graph.points[index2]),
+                    );
+                    ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                    graph.draw(ctx);
+                    console.log(success);
+                }
             }
 
             function addRandomPoint() {
@@ -33,7 +48,7 @@
                         Math.random() * myCanvas.height,
                     ),
                 );
-                ctx.clearRect(0, 0, myCanvas.wdith, myCanvas.height);
+                ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
                 graph.draw(ctx);
                 console.log(success);
             }
