Add remove point button that also removes connected segments

--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
             <button onClick="addRandomPoint()">Add Point</button>
             <button onClick="addRandomSegment()">Add Segment</button>
             <button onClick="removeRandomSegment()">Remove Segment</button>
+            <button onClick="removeRandomPoint()">Remove Point</button>
         </div>
 
         <script src="js/math/graph.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
         <script>
+            function removeRandomPoint() {
+                if (graph.points.length == 0) {
+                    console.log("no points");
+                    return;
+                }
+                const index = Math.floor(Math.random() * graph.points.length);
+                graph.removePoint(graph.points[index]);
+                ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                graph.draw(ctx);
+            }
+
             function removeRandomSegment() {
                 if (graph.segments.length == 0) {
                     console.log("no segments");
