--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
             <button onClick="addRandomSegment()">Add Segment</button>
             <button onClick="removeRandomSegment()">Remove Segment</button>
             <button onClick="removeRandomPoint()">Remove Point</button>
+            <button onClick="removeAll()">Remove All</button>
         </div>
 
         <script src="js/math/graph.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
         <script>
+            function removeAll() {
+                graph.dispose();
+                ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                graph.draw(ctx);
+            }
+
             function removeRandomPoint() {
                 if (graph.points.length == 0) {
                     console.log("no points");
