Remove interface buttons and use the mouse to create, select and delete points

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
         <h1>World Editor</h1>
         <canvas id="myCanvas"></canvas>
         <div id="controls">
-            <button onClick="addRandomPoint()">Add Point</button>
-            <button onClick="addRandomSegment()">Add Segment</button>
-            <button onClick="removeRandomSegment()">Remove Segment</button>
-            <button onClick="removeRandomPoint()">Remove Point</button>
-            <button onClick="removeAll()">Remove All</button>
         </div>
 
+        <script src="js/graphEditor.js"></script>
         <script src="js/math/graph.js"></script>
+        <script src="js/math/utils.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
         <script>
@@ -86,7 +83,15 @@
             const s3 = new Segment(p1, p4);
 
             const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-            graph.draw(ctx);
+            const graphEditor = new GraphEditor(myCanvas, graph);
+
+            animate();
+
+            function animate() {
+                ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                graphEditor.display();
+                requestAnimationFrame(animate);
+            }
         </script>
     </body>
 </html>
