--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
 
         <script src="js/graphEditor.js"></script>
+        <script src="js/viewport.js"></script>
         <script src="js/math/graph.js"></script>
         <script src="js/math/utils.js"></script>
         <script src="js/primitives/point.js"></script>
@@ -83,13 +84,17 @@
             const s3 = new Segment(p1, p4);
 
             const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-            const graphEditor = new GraphEditor(myCanvas, graph);
+            const viewport = new Viewport(myCanvas);
+            const graphEditor = new GraphEditor(viewport, graph);
 
             animate();
 
             function animate() {
                 ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+                ctx.save();
+                ctx.scale(1 / viewport.zoom, 1 / viewport.zoom);
                 graphEditor.display();
+                ctx.restore();
                 requestAnimationFrame(animate);
             }
         </script>
