--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>World Editor</h1>
         <canvas id="myCanvas"></canvas>
         <div id="controls">
+            <button onclick="dispose()">Erase</button>
+            <button onclick="save()">Save</button>
         </div>
 
         <script src="js/graphEditor.js"></script>
@@ -74,16 +76,9 @@
 
             const ctx = myCanvas.getContext("2d");
 
-            const p1 = new Point(200, 200);
-            const p2 = new Point(500, 200);
-            const p3 = new Point(400, 400);
-            const p4 = new Point(100, 300);
-
-            const s1 = new Segment(p1, p2);
-            const s2 = new Segment(p1, p3);
-            const s3 = new Segment(p1, p4);
-
-            const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
+            const graphString = localStorage.getItem("graph");
+            const graphInfo = graphString ? JSON.parse(graphString) : null;
+            const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
             const viewport = new Viewport(myCanvas);
             const graphEditor = new GraphEditor(viewport, graph);
 
@@ -93,6 +88,14 @@
                 viewport.reset();
                 graphEditor.display();
                 requestAnimationFrame(animate);
+            }
+
+            function dispose() {
+                graphEditor.dispose();
+            }
+
+            function save() {
+                localStorage.setItem("graph", JSON.stringify(graph));
             }
         </script>
     </body>
