--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <script src="js/math/utils.js"></script>
         <script src="js/primitives/point.js"></script>
         <script src="js/primitives/segment.js"></script>
+        <script src="js/primitives/polygon.js"></script>
+        <script src="js/primitives/envelope.js"></script>
         <script>
             function removeAll() {
                 graph.dispose();
@@ -87,6 +89,7 @@
             function animate() {
                 viewport.reset();
                 graphEditor.display();
+                new Envelope(graph.segments[0], 200, 20).draw(ctx);
                 requestAnimationFrame(animate);
             }
 
