--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
 
         <script src="js/graphEditor.js"></script>
+        <script src="js/world.js"></script>
         <script src="js/viewport.js"></script>
         <script src="js/math/graph.js"></script>
         <script src="js/math/utils.js"></script>
@@ -81,6 +82,8 @@
             const graphString = localStorage.getItem("graph");
             const graphInfo = graphString ? JSON.parse(graphString) : null;
             const graph = graphInfo ? Graph.load(graphInfo) : new Graph();
+            const world = new World(graph);
+
             const viewport = new Viewport(myCanvas);
             const graphEditor = new GraphEditor(viewport, graph);
 
@@ -88,8 +91,9 @@
 
             function animate() {
                 viewport.reset();
+                world.generate();
+                world.draw(ctx);
                 graphEditor.display();
-                new Envelope(graph.segments[0], 200, 20).draw(ctx);
                 requestAnimationFrame(animate);
             }
 
