Add the bases of the buildings along the roads automatically

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             const world = new World(graph);
 
             const viewport = new Viewport(myCanvas);
+            viewport.zoom = 3;
             const graphEditor = new GraphEditor(viewport, graph);
 
             animate();
