Add buttons to toggle between the graph editor and the markings editor

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div id="controls">
             <button onclick="dispose()">Erase</button>
             <button onclick="save()">Save</button>
+            &nbsp;
+            <button id="graphBtn" onclick="setMode('graph')">World</button>
+            <button id="stopBtn" onclick="setMode('stop')">Stop</button>
         </div>
 
         <script src="js/graphEditor.js"></script>
@@ -91,6 +94,9 @@
             const graphEditor = new GraphEditor(viewport, graph);
 
             let oldGraphHash = graph.hash();
+
+            setMode("graph");
+
             animate();
 
             function animate() {
@@ -112,6 +118,29 @@
 
             function save() {
                 localStorage.setItem("graph", JSON.stringify(graph));
+            }
+
+            function setMode(mode) {
+                disableEditors();
+                switch (mode) {
+                    case "graph":
+                        graphBtn.style.backgroundColor = "white";
+                        graphBtn.style.filter = "";
+                        graphEditor.enable();
+                        break;
+                    case "stop":
+                        stopBtn.style.backgroundColor = "white";
+                        stopBtn.style.filter = "";
+                        break;
+                }
+            }
+
+            function disableEditors() {
+                graphBtn.style.background = "gray";
+                graphBtn.style.filter = "grayscale(100%)";
+                graphEditor.disable();
+                stopBtn.style.background = "gray";
+                stopBtn.style.filter = "grayscale(100%)";
             }
         </script>
     </body>
