--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <button id="stopBtn" onclick="setMode('stop')">Stop</button>
         </div>
 
-        <script src="js/graphEditor.js"></script>
         <script src="js/world.js"></script>
+        <script src="js/editors/graphEditor.js"></script>
+        <script src="js/editors/stopEditor.js"></script>
         <script src="js/viewport.js"></script>
         <script src="js/items/tree.js"></script>
         <script src="js/items/building.js"></script>
@@ -92,6 +93,7 @@
             const viewport = new Viewport(myCanvas);
             viewport.zoom = 3;
             const graphEditor = new GraphEditor(viewport, graph);
+            const stopEditor = new StopEditor(viewport, world);
 
             let oldGraphHash = graph.hash();
 
@@ -109,6 +111,7 @@
                 world.draw(ctx, viewPoint);
                 ctx.globalAlpha = 0.3;
                 graphEditor.display();
+                stopEditor.display();
                 requestAnimationFrame(animate);
             }
 
@@ -131,6 +134,7 @@
                     case "stop":
                         stopBtn.style.backgroundColor = "white";
                         stopBtn.style.filter = "";
+                        stopEditor.enable();
                         break;
                 }
             }
@@ -141,6 +145,7 @@
                 graphEditor.disable();
                 stopBtn.style.background = "gray";
                 stopBtn.style.filter = "grayscale(100%)";
+                stopEditor.disable();
             }
         </script>
     </body>
