--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="js/editors/graphEditor.js"></script>
         <script src="js/editors/stopEditor.js"></script>
         <script src="js/viewport.js"></script>
+        <script src="js/markings/stop.js"></script>
         <script src="js/items/tree.js"></script>
         <script src="js/items/building.js"></script>
         <script src="js/math/graph.js"></script>
