--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
             function dispose() {
                 graphEditor.dispose();
+                world.markings.length = 0;
             }
 
             function save() {
