Add the crossing editor and marking to be able to add road crossings

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
             &nbsp;
             <button id="graphBtn" onclick="setMode('graph')">World</button>
             <button id="stopBtn" onclick="setMode('stop')">Stop</button>
+            <button id="crossingBtn" onclick="setMode('crossing')">
+                Crossing
+            </button>
         </div>
 
         <script src="js/world.js"></script>
         <script src="js/editors/graphEditor.js"></script>
         <script src="js/editors/stopEditor.js"></script>
+        <script src="js/editors/crossingEditor.js"></script>
         <script src="js/viewport.js"></script>
         <script src="js/markings/stop.js"></script>
+        <script src="js/markings/crossing.js"></script>
         <script src="js/items/tree.js"></script>
         <script src="js/items/building.js"></script>
         <script src="js/math/graph.js"></script>
@@ -95,6 +100,7 @@
             viewport.zoom = 3;
             const graphEditor = new GraphEditor(viewport, graph);
             const stopEditor = new StopEditor(viewport, world);
+            const crossingEditor = new CrossingEditor(viewport, world);
 
             let oldGraphHash = graph.hash();
 
@@ -113,6 +119,7 @@
                 ctx.globalAlpha = 0.3;
                 graphEditor.display();
                 stopEditor.display();
+                crossingEditor.display();
                 requestAnimationFrame(animate);
             }
 
@@ -138,6 +145,11 @@
                         stopBtn.style.filter = "";
                         stopEditor.enable();
                         break;
+                    case "crossing":
+                        crossingBtn.style.backgroundColor = "white";
+                        crossingBtn.style.filter = "";
+                        crossingEditor.enable();
+                        break;
                 }
             }
 
@@ -148,6 +160,9 @@
                 stopBtn.style.background = "gray";
                 stopBtn.style.filter = "grayscale(100%)";
                 stopEditor.disable();
+                crossingBtn.style.background = "gray";
+                crossingBtn.style.filter = "grayscale(100%)";
+                crossingEditor.disable();
             }
         </script>
     </body>
