Refactor editors using a new superclass marking editor

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
 
         <script src="js/world.js"></script>
+        <script src="js/editors/markingEditor.js"></script>
         <script src="js/editors/graphEditor.js"></script>
         <script src="js/editors/stopEditor.js"></script>
         <script src="js/editors/crossingEditor.js"></script>
