--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script src="js/editors/stopEditor.js"></script>
         <script src="js/editors/crossingEditor.js"></script>
         <script src="js/viewport.js"></script>
+        <script src="js/markings/marking.js"></script>
         <script src="js/markings/stop.js"></script>
         <script src="js/markings/crossing.js"></script>
         <script src="js/items/tree.js"></script>
