--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
             const graphEditor = new GraphEditor(viewport, graph);
             const stopEditor = new StopEditor(viewport, world);
             const crossingEditor = new CrossingEditor(viewport, world);
+            const tools = {
+                graph: { button: graphBtn, editor: graphEditor },
+                stop: { button: stopBtn, editor: stopEditor },
+                crossing: { button: crossingBtn, editor: crossingEditor },
+            };
 
             let oldGraphHash = graph.hash();
 
@@ -119,9 +124,9 @@
                 const viewPoint = scale(viewport.getOffset(), -1);
                 world.draw(ctx, viewPoint);
                 ctx.globalAlpha = 0.3;
-                graphEditor.display();
-                stopEditor.display();
-                crossingEditor.display();
+                for (const tool of Object.values(tools)) {
+                    tool.editor.display();
+                }
                 requestAnimationFrame(animate);
             }
 
@@ -136,35 +141,17 @@
 
             function setMode(mode) {
                 disableEditors();
-                switch (mode) {
-                    case "graph":
-                        graphBtn.style.backgroundColor = "white";
-                        graphBtn.style.filter = "";
-                        graphEditor.enable();
-                        break;
-                    case "stop":
-                        stopBtn.style.backgroundColor = "white";
-                        stopBtn.style.filter = "";
-                        stopEditor.enable();
-                        break;
-                    case "crossing":
-                        crossingBtn.style.backgroundColor = "white";
-                        crossingBtn.style.filter = "";
-                        crossingEditor.enable();
-                        break;
-                }
+                tools[mode].button.style.backgroundColor = "white";
+                tools[mode].button.style.filter = "";
+                tools[mode].editor.enable();
             }
 
             function disableEditors() {
-                graphBtn.style.background = "gray";
-                graphBtn.style.filter = "grayscale(100%)";
-                graphEditor.disable();
-                stopBtn.style.background = "gray";
-                stopBtn.style.filter = "grayscale(100%)";
-                stopEditor.disable();
-                crossingBtn.style.background = "gray";
-                crossingBtn.style.filter = "grayscale(100%)";
-                crossingEditor.disable();
+                for (const tool of Object.values(tools)) {
+                    tool.button.style.background = "gray";
+                    tool.button.style.filter = "grayscale(100%)";
+                    tool.editor.disable();
+                }
             }
         </script>
     </body>
