Add the start marking

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
             <button id="crossingBtn" onclick="setMode('crossing')">
                 Crossing
             </button>
+            <button id="startBtn" onclick="setMode('start')">Start</button>
         </div>
 
         <script src="js/world.js"></script>
         <script src="js/editors/markingEditor.js"></script>
         <script src="js/editors/graphEditor.js"></script>
         <script src="js/editors/stopEditor.js"></script>
+        <script src="js/editors/startEditor.js"></script>
         <script src="js/editors/crossingEditor.js"></script>
         <script src="js/viewport.js"></script>
         <script src="js/markings/marking.js"></script>
         <script src="js/markings/stop.js"></script>
+        <script src="js/markings/start.js"></script>
         <script src="js/markings/crossing.js"></script>
         <script src="js/items/tree.js"></script>
         <script src="js/items/building.js"></script>
@@ -112,6 +115,10 @@
                 crossing: {
                     button: crossingBtn,
                     editor: new CrossingEditor(viewport, world),
+                },
+                start: {
+                    button: startBtn,
+                    editor: new StartEditor(viewport, world),
                 },
             };
 
